2006-02-18 Paul Jakma <paul.jakma@sun.com>

	* bgp_routemap.c: (route_set_community) Quick, very hacky, fix
	  for the set-community leak, bug #89. True fix will be to
	  detangle the web of *_intern caching and provide saner object
	  caching for Quagga, future work.

2005-08-26 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Third (?) attempt to fix best selection breakage
	  introduced long time ago with route server patch. Hopefully
	  it's last case to fix - route-server client not in peer group.

2005-08-03 Hasso Tepper <hasso at quagga.net>

	* bgp_routemap.c: Revert part of leaking communities fix commited in
	  2005-05-27. While ecommunity fix seems to be correct, community case
	  isn't.

2005-05-31 Hasso Tepper <hasso at quagga.net>

	* bgp_routemap.c: Sync set_metric_addsub cmd with ripd.

2005-05-27 Hasso Tepper <hasso at quagga.net>

	* bgpd.c: Don't crash while deleting bgp->groups or bgp->rsclient
	  lists in bgp_delete(). Stop leaking lists.

2005-05-27 Hasso Tepper <hasso at quagga.net>

	* bgp_routemap.c: Stop leaking communities.

2005-05-27 Hasso Tepper <hasso at quagga.net>

	* bgpd.c: Fix obvious (routeserver patch) merge error. This makes "no
	  neighbor x.x.x.x routemap [export|import] commands work again.

2005-03-21 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Don't crash while clearing route tables if there is
	  no particular afi/safi configured.

2005-02-23 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Make reannouncing prefixes with changed attributes
	  work again.

2005-01-24 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Fix showstopper bug. New route must be selected also
	  if old one is flaged as BGP_INFO_ATTR_CHANGED.

2005-01-17 Hasso Tepper <hasso at quagga.net>

	* bgp_route.c: Clear peer's routing table regardless whether it's
	  configured or not. Being not configured is even better reason to
	  do it.

2005-01-05 Paul Jakma <paul@dishone.st>
